syntax = "proto3";

package proto;

option java_package = "com.hedera.pbj.test.proto.java";
option java_multiple_files = true;
// <<<pbj.java_package = "com.hedera.pbj.test.proto.pbj">>> This comment is special code for setting PBJ Compiler java package

// <<<pbj.comparable = "int32List" >>>
message NonSupportedComparableTestBytes {
    repeated int32 int32List = 2;
}

