syntax = "proto3";

package proto;

option java_package = "com.hedera.pbj.test.proto.java";
option java_multiple_files = true;
// <<<pbj.java_package = "com.hedera.pbj.test.proto.pbj">>> This comment is special code for setting PBJ Compiler java package


message NonComparableSubObj {
  int32 num = 1;
}

// <<<pbj.comparable = "subObject" >>>
message NonCompilableComparableTest {
  NonComparableSubObj subObject = 1;
}


